--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <!-- Countdown Display (appears dynamically) -->
-    <div id="countdown-timer-container" class="d-flex justify-content-center"></div>
+    <div id="countdown-timer-container" class="d-flex justify-content-center" role="status" aria-live="polite"></div>
     <main class="container my-4" id="main-content" role="main">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0" aria-labelledby="your-move-heading">
@@ -401,7 +401,7 @@
         <div id="browser-console"
             style="background:#222;color:#eee;padding:1em;font-family:monospace;max-height:200px;overflow:auto;"></div>
     </main>
-    <canvas id="confetti-canvas"></canvas>
+    <canvas id="confetti-canvas" aria-hidden="true"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="assets/js/main.js"></script>
