--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Spock It To Me!</title>
+
+    <!-- Favicon -->
+    <!-- Primary vector icon -->
+    <link rel="icon" href="assets/favicon/favicon.svg" type="image/svg+xml">
+
+    <!-- Standard ICO fallback for older browsers -->
+    <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+
+    <!-- PNG fallbacks for various sizes -->
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+
+    <!-- Android / PWA icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/android-chrome-512x512.png">
+
+    <!-- iOS / Apple touch icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <meta name="theme-color" content="#222222">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@7.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -191,6 +214,7 @@
 
     <!-- Countdown Display (appears dynamically) -->
     <div id="countdown-timer-container" class="d-flex justify-content-center" role="status" aria-live="polite"></div>
+
     <main class="container my-4" id="main-content" role="main">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0" aria-labelledby="your-move-heading">
@@ -225,6 +249,7 @@
                     </div>
                 </div>
             </section>
+
             <section class="col-12 col-md-6 mb-4 mb-md-0" aria-labelledby="opponent-move-heading">
                 <div class="p-3 text-center">
                     <h2 class="text-center section-title" id="opponent-move-heading">Opponent Move:</h2>
@@ -394,14 +419,18 @@
                 </div>
             </div>
         </div>
+
         <div class="text-center mt-4">
             <h2 id="game-state-message" class="mt-3"></h2>
         </div>
 
         <div id="browser-console"
             style="background:#222;color:#eee;padding:1em;font-family:monospace;max-height:200px;overflow:auto;"></div>
+    
     </main>
+
     <canvas id="confetti-canvas" aria-hidden="true"></canvas>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
     <script src="assets/js/main.js"></script>
