--- a/index.html
+++ b/index.html
@@ -420,12 +420,9 @@
             </div>
         </div>
 
-        <div class="text-center mt-4">
+        <div class="text-center mt-4 pt-4">
             <h2 id="game-state-message" class="mt-3"></h2>
         </div>
-
-        <div id="browser-console"
-            style="background:#222;color:#eee;padding:1em;font-family:monospace;max-height:200px;overflow:auto;"></div>
     
     </main>
 
