--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@
     <!-- Countdown Display (appears dynamically) -->
     <div id="countdown-timer-container" class="d-flex justify-content-center" role="status" aria-live="polite"></div>
 
+    <div class="text-center mt-4 pb-4">
+        <h2 id="game-state-message" class="mt-3" aria-live="polite"></h2>
+    </div>
+
     <main class="container my-4" id="main-content" role="main">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0" aria-labelledby="your-move-heading">
@@ -418,12 +422,8 @@
                     </div>
                 </div>
             </div>
-        </div>
+    </div>
 
-        <div class="text-center mt-4 pt-4">
-            <h2 id="game-state-message" class="mt-3"></h2>
-        </div>
-    
     </main>
 
     <canvas id="confetti-canvas" aria-hidden="true"></canvas>
