--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         aria-label="Close"></button>
                 </div>
                 <h5 class="text-center display-6 py-4">Spock It To Me - How To Play Rock, Paper, Scissors, Lizard, Spock.</h5>
+                <p id="instructionsModalDesc" class="visually-hidden">Instructions for how to play the game and keyboard shortcuts.</p>
                 <p class="text-center fs-6">🎉 Rock Paper Scissors Lizard Spock is the turbocharged, galaxy-brained
                     upgrade to the classic hand game you played in the schoolyard. Invented by Sam Kass and popularized
                     by The Big Bang Theory, it adds two brilliant new contenders — Lizard and Spock — to the original
@@ -218,10 +219,10 @@
     <div id="countdown-timer-container" class="d-flex justify-content-center" role="status" aria-live="polite"></div>
 
     <div class="text-center mt-4 pb-4">
-        <h2 id="game-state-message" class="mt-3" aria-live="polite"></h2>
+        <h2 id="game-state-message" class="mt-3" aria-live="polite"><span class="visually-hidden">Waiting for game to start</span></h2>
     </div>
 
-    <main class="container my-4" id="main-content" role="main">
+    <main class="container my-4" id="main-content">
         <div class="row">
             <section class="col-12 col-md-6 mb-4 mb-md-0" aria-labelledby="your-move-heading">
                 <div class="p-3 text-center">
@@ -305,8 +306,7 @@
                     <div id="scoreCounter" class="px-4 py-2 bg-light rounded border text-center w-100"
                         aria-live="polite">
                         <span class="fw-bold scoreTxt">Score:</span>
-                        <span id="playerScore" class="text-success" aria-label="Player score">0</span> - <span id="cpuScore"
-                            class="text-danger" aria-label="Computer score">0</span> - <span id="drawScore" class="text-secondary" aria-label="Draws">0</span>
+                        <span id="playerScore" class="text-success">0</span> - <span id="cpuScore" class="text-danger">0</span> - <span id="drawScore" class="text-secondary">0</span>
                     </div>
                 </div>
                 <div
@@ -341,10 +341,10 @@
                                     <img src="assets/images/Easy.webp" alt="Easy difficulty"
                                         class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Easy</span>
-                                    <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                    <span class="d-inline-flex justify-content-center align-items-center w-100 gap-2">
                                         <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta"
                                             class="img-fluid peseta-img"> 1,000
-                                    </div>
+                                    </span>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
@@ -355,10 +355,10 @@
                                     <img src="assets/images/Medium.webp" alt="Medium difficulty"
                                         class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Medium</span>
-                                    <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                    <span class="d-inline-flex justify-content-center align-items-center w-100 gap-2">
                                         <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta"
                                             class="img-fluid peseta-img"> 10,000
-                                    </div>
+                                    </span>
                                 </button>
                             </div>
                             <div class="text-center flex-fill mx-2">
@@ -369,10 +369,10 @@
                                     <img src="assets/images/Hard.webp" alt="Hard difficulty"
                                         class="img-fluid mb-2 difficulty-img">
                                     <span class="w-100 text-center">Hard</span>
-                                    <div class="d-flex justify-content-center align-items-center w-100 gap-2">
+                                    <span class="d-inline-flex justify-content-center align-items-center w-100 gap-2">
                                         <img src="assets/images/spanish-peseta.png" alt="Spanish Peseta"
                                             class="img-fluid peseta-img"> 100,000
-                                    </div>
+                                    </span>
                                 </button>
                             </div>
                         </div>
@@ -430,7 +430,7 @@
     </main>
 
     <!-- Site footer -->
-    <footer class="site-footer bg-dark text-light py-5 mt-4" role="contentinfo" aria-label="Site footer">
+    <footer class="site-footer bg-dark text-light py-5 mt-4" aria-label="Site footer">
         <div class="container">
             <!-- Two columns with lists placed above the existing footer content -->
             <div class="row mb-4 align-items-center">
